--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Feb 20 15:39:09 CET 2013
-#Wed Feb 20 15:39:09 CET 2013
+#Updated at Wed Feb 20 16:07:55 CET 2013
+#Wed Feb 20 16:07:55 CET 2013
 application_name=Eportfolio
 label_fr_edu_eportfolio_domain_activite=Activite
 label_fr_edu_eportfolio_domain_activite_competences=Competences
@@ -9,6 +9,12 @@ label_fr_edu_eportfolio_domain_activite_plural=Activites
 label_fr_edu_eportfolio_domain_activite_urldetail=Url Detail
 label_fr_edu_eportfolio_domain_activite_version=Version
 label_fr_edu_eportfolio_domain_activite_vignette=Vignette
+label_fr_edu_eportfolio_domain_article=Article
+label_fr_edu_eportfolio_domain_article_detail=Detail
+label_fr_edu_eportfolio_domain_article_id=Id
+label_fr_edu_eportfolio_domain_article_nom=Nom
+label_fr_edu_eportfolio_domain_article_plural=Articles
+label_fr_edu_eportfolio_domain_article_version=Version
 label_fr_edu_eportfolio_domain_competence=Competence
 label_fr_edu_eportfolio_domain_competence_categori=Categori
 label_fr_edu_eportfolio_domain_competence_id=Id
@@ -17,8 +23,11 @@ label_fr_edu_eportfolio_domain_competence_plural=Competences
 label_fr_edu_eportfolio_domain_competence_reference=Reference
 label_fr_edu_eportfolio_domain_competence_version=Version
 menu_category_activite_label=Activite
+menu_category_article_label=Article
 menu_category_competence_label=Competence
 menu_item_activite_list_label=Activites
 menu_item_activite_new_label=Activite
+menu_item_article_list_label=Articles
+menu_item_article_new_label=Article
 menu_item_competence_list_label=Competences
 menu_item_competence_new_label=Competence
