--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,7 +1,8 @@
-#Updated at Wed Feb 20 16:07:55 CET 2013
-#Wed Feb 20 16:07:55 CET 2013
+#Updated at Wed Feb 20 19:56:23 CET 2013
+#Wed Feb 20 19:56:23 CET 2013
 application_name=Eportfolio
 label_fr_edu_eportfolio_domain_activite=Activite
+label_fr_edu_eportfolio_domain_activite_articles=Articles
 label_fr_edu_eportfolio_domain_activite_competences=Competences
 label_fr_edu_eportfolio_domain_activite_id=Id
 label_fr_edu_eportfolio_domain_activite_nom=Nom
