--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Feb 20 19:56:23 CET 2013
-#Wed Feb 20 19:56:23 CET 2013
+#Updated at Wed Feb 20 20:49:07 CET 2013
+#Wed Feb 20 20:49:07 CET 2013
 application_name=Eportfolio
 label_fr_edu_eportfolio_domain_activite=Activite
 label_fr_edu_eportfolio_domain_activite_articles=Articles
@@ -18,17 +18,21 @@ label_fr_edu_eportfolio_domain_article_plural=Articles
 label_fr_edu_eportfolio_domain_article_version=Version
 label_fr_edu_eportfolio_domain_competence=Competence
 label_fr_edu_eportfolio_domain_competence_categori=Categori
+label_fr_edu_eportfolio_domain_competence_categorie=Categorie
 label_fr_edu_eportfolio_domain_competence_id=Id
 label_fr_edu_eportfolio_domain_competence_nom=Nom
 label_fr_edu_eportfolio_domain_competence_plural=Competences
 label_fr_edu_eportfolio_domain_competence_reference=Reference
 label_fr_edu_eportfolio_domain_competence_version=Version
+label_presentation_index=Presentation View
 menu_category_activite_label=Activite
 menu_category_article_label=Article
 menu_category_competence_label=Competence
+menu_category_controller_label=Controller
 menu_item_activite_list_label=Activites
 menu_item_activite_new_label=Activite
 menu_item_article_list_label=Articles
 menu_item_article_new_label=Article
 menu_item_competence_list_label=Competences
 menu_item_competence_new_label=Competence
+menu_item_controller__presentationindex_id_label=Presentation View
