--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,7 @@
-#Updated at Wed Feb 20 20:49:07 CET 2013
-#Wed Feb 20 20:49:07 CET 2013
+#Updated at Sun Feb 24 13:17:22 CET 2013
+#Sun Feb 24 13:17:22 CET 2013
 application_name=Eportfolio
+label_administration_index=Administration View
 label_fr_edu_eportfolio_domain_activite=Activite
 label_fr_edu_eportfolio_domain_activite_articles=Articles
 label_fr_edu_eportfolio_domain_activite_competences=Competences
@@ -24,15 +25,28 @@ label_fr_edu_eportfolio_domain_competence_nom=Nom
 label_fr_edu_eportfolio_domain_competence_plural=Competences
 label_fr_edu_eportfolio_domain_competence_reference=Reference
 label_fr_edu_eportfolio_domain_competence_version=Version
+label_fr_edu_eportfolio_domain_situationpro=Situation Pro
+label_fr_edu_eportfolio_domain_situationpro_articles=Articles
+label_fr_edu_eportfolio_domain_situationpro_competences=Competences
+label_fr_edu_eportfolio_domain_situationpro_id=Id
+label_fr_edu_eportfolio_domain_situationpro_nom=Nom
+label_fr_edu_eportfolio_domain_situationpro_plural=Situation Proes
+label_fr_edu_eportfolio_domain_situationpro_urldetail=Url Detail
+label_fr_edu_eportfolio_domain_situationpro_version=Version
+label_fr_edu_eportfolio_domain_situationpro_vignette=Vignette
 label_presentation_index=Presentation View
 menu_category_activite_label=Activite
 menu_category_article_label=Article
 menu_category_competence_label=Competence
 menu_category_controller_label=Controller
+menu_category_situationpro_label=Situation Pro
 menu_item_activite_list_label=Activites
 menu_item_activite_new_label=Activite
 menu_item_article_list_label=Articles
 menu_item_article_new_label=Article
 menu_item_competence_list_label=Competences
 menu_item_competence_new_label=Competence
+menu_item_controller__administrationindex_id_label=Administration View
 menu_item_controller__presentationindex_id_label=Presentation View
+menu_item_situationpro_list_label=Situation Proes
+menu_item_situationpro_new_label=Situation Pro
