Ajout controller couverturecomp

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,7 +1,8 @@
-#Updated at Sun Feb 24 13:17:22 CET 2013
-#Sun Feb 24 13:17:22 CET 2013
+#Updated at Mon Feb 25 20:36:26 CET 2013
+#Mon Feb 25 20:36:26 CET 2013
 application_name=Eportfolio
 label_administration_index=Administration View
+label_couverturecomp_index=Couverture Comp View
 label_fr_edu_eportfolio_domain_activite=Activite
 label_fr_edu_eportfolio_domain_activite_articles=Articles
 label_fr_edu_eportfolio_domain_activite_competences=Competences
@@ -47,6 +48,7 @@ menu_item_article_new_label=Article
 menu_item_competence_list_label=Competences
 menu_item_competence_new_label=Competence
 menu_item_controller__administrationindex_id_label=Administration View
+menu_item_controller__couverturecompindex_id_label=Couverture Comp View
 menu_item_controller__presentationindex_id_label=Presentation View
 menu_item_situationpro_list_label=Situation Proes
 menu_item_situationpro_new_label=Situation Pro
